<resources>
    <string name="app_name">Mon.Ey</string>

    <!--MAIN ACTIVITY-->
    <string name="greeting_morning">Good morning!</string>
    <string name="greeting_afternoon">Good afternoon!</string>
    <string name="greeting_night">Good evening!</string>

    <!-- months -->
    <string name="in_month_january">In January</string>
    <string name="in_month_february">In February</string>
    <string name="in_month_march">In March</string>
    <string name="in_month_april">In April</string>
    <string name="in_month_may">In May</string>
    <string name="in_month_june">In June</string>
    <string name="in_month_july">In July</string>
    <string name="in_month_august">In August</string>
    <string name="in_month_september">In September</string>
    <string name="in_month_october">In October</string>
    <string name="in_month_november">In November</string>
    <string name="in_month_december">In December</string>

    <!-- currencies -->


    <string name="goal_info_message">%1$s, you can spend another %2$s %3$s.</string>
    <string name="set_goal_warning">Please, set up your monthly limit!\n💸💸💸</string>
    <string name="limit_reached_warning">Sorry, you\'ve reached your monthly limit!\n😟😟</string>
    <string name="limit_exceeded_warning">OMG, you\'ve exceeded your monthly limit!\n😨😨</string>

    <!-- SETTINGS-->
    <string name="settings_label">Settings</string>
    <string name="currency_label">Currency: </string>
    <string name="fav_category_label">Favourite category: </string>
    <string name="sound_effect_label">Sound effects: </string>
    <string name="limit_label">Monthly limit:</string>
    <string name="database_error_toast">Database error!</string>

    <!--DROPDOWN MENUS-->
    <string-array name="can_spend_currencies">
        <item>forint</item>
        <item>dollar</item>
        <item>euro</item>
    </string-array>

    <string-array name="currencies">
        <item>Forint</item>
        <item>Dollar</item>
        <item>Euro</item>
    </string-array>

    <string-array name="categories">
        <item>Bills</item>
        <item>Restaurants &amp; Bars</item>
        <item>Entertainment</item>
        <item>Donation</item>
        <item>Groceries</item>
        <item>Health and wellness</item>
        <item>Transportation</item>
        <item>Home accessories</item>
        <item>Clothing</item>
        <item>Travels</item>
        <item>Other</item>
    </string-array>

    <!--ADD PURCHASE-->
    <string name="add_purchase_label">Add purchase</string>

    <string name="category">category</string>
    <string name="currency">currency</string>
    <string name="amount">amount</string>
    <string name="place_of_purchase">place of purchase</string>
    <string name="date">date</string>
    <string name="purchase_added">Purchase added!</string>

    <string name="date_hint">knock here</string>
    <string name="place_of_purchase_hint">e.g.: TESCO</string>
    <string name="add_purchase_button_label">ADD</string>

    <string name="fill_date_field_warning">
        Please, enter the date of your purchase!
    </string>

    <string name="fill_place_field_warning">
       Please, enter the place of your purchase!
    </string>

    <string name="fill_amount_field_warning">
        Please, enter the amount of your purchase!
    </string>

    <!--LIST PURCHASES-->
    <string name="added_purchases">Added purchases</string>


    <string name="delete_purchase">Delete purchase</string>
    <string name="are_you_sure_deleting">Are you sure you want to delete this purchase?</string>
    <string name="positive_button_yes">Yes</string>
    <string name="positive_button_okay">Okay</string>
    <string name="negative_button">Cancel</string>
    <string name="no_added_purchase">No added purchases!</string>

    <!--ABOUT-->
    <string name="about">About</string>

    <string name="developer">Developer:</string>
    <string name="developer_name">David Pokol</string>

    <string name="app_version">Version:</string>
    <string name="app_version_number">v1.00</string>

    <string name="rate_the_app">Rate the app!</string>
    <string name="bug_found">Found a bug?\nLet me know!</string>

    <string name="find_my_money_button">FIND MY MONEY</string>
    <string name="find_my_money_found_button">I FOUND IT!</string>

    <string name="money_find_error">I\'m afraid, this phone doesn\'t have a money finder😢</string>

    <string name="bugfix_mail_subject">Mon.ey application bug</string><!-- Mon.ey app bugfix -->

    <string name="email_error">An error occurred while opening the mailing app!</string>

    <!--CATEGORIZATION-->
    <string name="categorization">Categorization</string>

    <!-- UTIL -->
    <string name="empty_string"> </string>

</resources>