<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <TextView
        android:id="@+id/about_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="@color/money_dark_green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/find_my_money_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:checked="false"
        android:textOff="@string/find_my_money_button"
        android:textOn="@string/find_my_money_found_button"
        android:backgroundTint="@color/money_light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/developer_textView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center"
        android:text="@string/developer"
        android:textAlignment="center"
        android:textColor="@color/money_dark_green"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_text_view" />

    <TextView
        android:id="@+id/developer_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center"
        android:text="@string/developer_name"
        android:textAlignment="center"
        android:textColor="#888C8D"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toEndOf="@+id/developer_textView"
        app:layout_constraintTop_toBottomOf="@+id/about_text_view" />

    <TextView
        android:id="@+id/version_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center"
        android:text="@string/app_version_number"
        android:textAlignment="center"
        android:textColor="#888C8D"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toEndOf="@+id/version_text_view"
        app:layout_constraintTop_toBottomOf="@+id/developer_name_text_view" />

    <TextView
        android:id="@+id/version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textColor="@color/money_dark_green"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developer_textView" />

    <TextView
        android:id="@+id/rate_the_app_text_view"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center"
        android:text="@string/rate_the_app"
        android:textAlignment="center"
        android:textColor="@color/money_dark_green"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version_text_view" />

    <TextView
        android:id="@+id/bug_found_text_view"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_mono"
        android:gravity="center"
        android:text="@string/bug_found"
        android:textAlignment="center"
        android:textColor="@color/money_dark_green"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <ImageButton
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/money_dark_green"
        android:gravity="center"
        android:padding="20dp"
        android:paddingTop="7dp"
        android:src="@drawable/email"
        app:cornerRadius="30dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bug_found_text_view"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_the_app_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>