<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ListActivity">

    <TextView
        android:id="@+id/ListPurchaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/added_purchases"
        android:textAlignment="center"
        android:textColor="@color/money_dark_green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/gridLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.gridlayout.widget.GridLayout

        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:columnCount="1"
        app:alignmentMode="alignBounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border"
        app:rowCount="8">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/date"
            android:textColor="@color/money_dark_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultDateTextView"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono" />

        <TextView
            android:id="@+id/placeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/place_of_purchase"
            android:textColor="@color/money_dark_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultPlaceTextView"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/amount"
            android:textColor="@color/money_dark_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultAmountTextView"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/category"
            android:textColor="@color/money_dark_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultCategoryTextView"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono" />

    </androidx.gridlayout.widget.GridLayout>

    <ImageButton
        android:id="@+id/email_button"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        app:cornerRadius="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/money_dark_green"
        android:gravity="center"
        android:paddingTop="7dp"
        android:src="@drawable/arrow_previous"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/money_dark_green"
        android:gravity="center"
        android:padding="20dp"
        android:paddingTop="7dp"
        android:src="@drawable/arrow_next"
        app:cornerRadius="30dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.497" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/delete_red"
        android:gravity="center"
        android:padding="20dp"
        android:paddingTop="7dp"
        android:src="@drawable/bin_delete"
        app:cornerRadius="30dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.912" />

</androidx.constraintlayout.widget.ConstraintLayout>