<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PurchaseActivity">

    <TextView
        android:id="@+id/addPurchaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_purchase_label"
        android:textAlignment="center"
        android:textColor="@color/money_dark_green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:rowCount="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="dátum"
            android:textAlignment="center"
            android:textColor="@color/money_dark_green"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:text="@string/empty_string" />

        <TextView
            android:id="@+id/placeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="vársárlás helye"
            android:textAlignment="center"
            android:textColor="@color/money_dark_green"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/purchasePlaceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Vársárlás helye"
            android:inputType="textPersonName"
            android:text="@string/empty_string"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="összeg"
            android:textAlignment="center"
            android:textColor="@color/money_dark_green"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/empty_string" />

        <TextView
            android:id="@+id/currencyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="valuta"
            android:textAlignment="center"
            android:textColor="@color/money_dark_green"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/currencySpinner"
            android:layout_width="209dp"
            android:layout_height="42dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kategória"
            android:textAlignment="center"
            android:textColor="@color/money_dark_green"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="209dp"
            android:layout_height="42dp" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/money_dark_green"
        android:gravity="center"
        android:paddingTop="7dp"
        android:text="@string/add_purchase_button_label"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>